# read-for-me

./: .cursorignore  .gitignore  .mcp.json  .pre-commit-config.yaml  docker-compose.yml  openapi.json
.cursor/plans/: ci_cd_pipeline_구축_30f09a03.plan.md  gcs_storage_migration_7adc174a.plan.md  minimal_ui_refactoring_5ffdc597.plan.md  phase_5_범용_크롤러_faa5b36a.plan.md  phoenix_llmops_integration_2f2ee133.plan.md  streaming_+_thinking_구현_109093e6.plan.md  todo_new.md_개편_88fe5e9a.plan.md  tts_audio_synthesis_3698c60d.plan.md  뉴스_스크립트_생성_서비스_a5c6a315.plan.md  요약_서비스_langchain_구현_f4be30bc.plan.md
.cursor/rules/: debugging.mdc  nextjs.mdc
.github/env/: dev.env  prod.env
.github/workflows/: apidog-sync.yml  ci.yml  deploy-dev.yml  deploy-prod.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  audio.py  crawl.py  summarize.py
backend/app/core/: config.py  tracing.py
backend/app/services/: __init__.py  audio.py  prompt_loader.py  storage.py  summary.py
backend/app/services/crawlers/: __init__.py  base.py  errors.py  factory.py  geeknews.py  generic.py  medium.py  schemas.py
backend/output_schemas/: __init__.py  audio.py  summary.py
backend/prompts/v1/: news_script.md  news_script_stream.md  summary.md  summary_stream.md
docs/: DEPLOY.md  DESIGN-SPEC.md  DONE-instructions.md  DONE.md  OpenAI_TTS_doc.md  PRD.md  TODO_v1.md  TODO_v2.md  trial_error.md
docs/done/: DONE-20251215.md  DONE-20251216.md  DONE-20251218.md  DONE-20251221.md  DONE-20251223.md  DONE-20251224.md  DONE-20251225.md  DONE-20251226.md
frontend/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: audio-player-card.tsx  (+5 more)
(+11 files in other folders)
